Adding flowcard capabilities

--- a/example_applications/simple_cards/html/index.html
+++ b/example_applications/simple_cards/html/index.html
@@ -18,7 +18,7 @@
 		<!-- Bootstrap the Application -->
 		<script type="text/javascript">
 //<![CDATA[
-		Pict.safeOnDocumentReady(() => { Pict.safeLoadPictApplication(PictSectionFlowExample, 2)});
+		Pict.safeOnDocumentReady(() => { Pict.safeLoadPictApplication(PictSectionFlowExampleSimpleCards, 2)});
 //]]>
 		</script>
 	</head>
@@ -27,6 +27,6 @@
 		<div id="FlowExample-Application-Container"></div>
 
 		<!-- Load the FlowExample PICT Application Bundle -->
-		<script src="./pict-section-flow-example.compatible.min.js" type="text/javascript"></script>
+		<script src="./pict-section-flow-example-simple-cards.compatible.min.js" type="text/javascript"></script>
 	</body>
 </html>
